Re-activated KeyRelease device tests